--- a/content/post/covid19-fox-news-plot.Rmd
+++ b/content/post/covid19-fox-news-plot.Rmd
@@ -8,7 +8,7 @@ output:
     code_folding: hide
   word_document: default
 og_image: /post/covid19-fox-news-plot_files/figure-html/featured_image-1.png
-draft: yes
+draft: no
 slug: covid19-fox-news-plot
 tags_include:
   - R
@@ -41,7 +41,7 @@ the perceived slope of the data from March 26.
 Visual inspection of my data suggested that this was Colorado. Rebuild the plot.
 
 
-```{r featured_image, warning = FALSE, message = FALSE}
+```{r base_image, warning = FALSE, message = FALSE}
 library("tidyverse")
 library("lubridate")
 library("broom")
@@ -117,7 +117,7 @@ to reduce the apparent slope of points after March 25. Let's call that
 the "devious" hypothesis. So now I'll try to force `ggplot()` to do both 
 of those things ... 
 
-```{r}
+```{r featured_image}
 incompetent <- ggplot(data = fox_data) +
   geom_line(mapping = aes(x = Date, y = cases), size = 2, color="white") +
   geom_label(mapping = aes(x = Date, y = cases, label = cases)) +
