fix dates back to 2020 ---

--- a/content/post/covid-19_in_R_VII.Rmd
+++ b/content/post/covid-19_in_R_VII.Rmd
@@ -1,7 +1,7 @@
 ---
 title: "COVID-19 and R Part VII"
 author: "Drew Tyre"
-date: "`r Sys.Date()`"
+date: "2020-03-19"
 output:
   word_document: default
   html_document:
